lecturer main body alignments fixed (#221)

--- a/admin/EvaluationSection/style-evaluation.css
+++ b/admin/EvaluationSection/style-evaluation.css
@@ -4,7 +4,7 @@ h4 {
 }
 
 .vh-100 {
-    margin-left: 250px;
+    margin-left: 300px;
     margin-right: 50px;
 }
 
